# accel

./: .gitignore  CMakeLists.txt  conanfile.py
.github/workflows/: build.yml
cmake/: lux-accelConfig.cmake.in
include/lux/accel/: accel.hpp  backend_api.h  c_api.h  crypto.hpp  dex.hpp  fhe.hpp  lattice.hpp  ml.hpp  tensor.hpp  zk.hpp
src/: c_api.cpp  crypto.cpp  dex.cpp  fhe.cpp  lattice.cpp  ml.cpp  session.cpp  tensor.cpp  zk.cpp
